--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
                     <!-- .player*6>img[src="images/players/player-$.png"]+h3{Top Player-$} -->
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3 class="Player-name">Top Player-1</h3>
+                        <h3 class="Player-name">John Smith</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3 class="Player-name">Top Player-2</h3>
+                        <h3 class="Player-name">Pro Rasel</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3 class="Player-name">Top Player-3</h3>
+                        <h3 class="Player-name">Abu Sufian</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3 class="Player-name">Top Player-4</h3>
+                        <h3 class="Player-name">Shajedul Karim</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3 class="Player-name">Top Player-5</h3>
+                        <h3 class="Player-name">Maruf Ahmed</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3 class="Player-name">Top Player-6</h3>
+                        <h3 class="Player-name">Mujahid</h3>
                     </div>
                 </div>
             </div>
